# qfhe

./:  high_level_program.mlir.example  .gitignore  .gitmodules  Cargo.toml  Makefile  Makefile.release  build.rs  cbindgen.toml  main_demo
demo/: 01_generate_keys.c  01a_generate_essential_keys.c  01b_generate_conjugation_key.c  01c_generate_bootstrap_key.c  02_encrypt.c  03_decrypt.c  04_add.c  05_mul.c  05_sub.c  06_bootstrap.c  06_mul.c  file_io.c  file_io.h  main.c  run.c  run.h
devutils/: gen_ntt_params.py
docs/: mathematical-definitions.md
docs/reports/: initial.md
include/: qfhe.h
reports/: initial.md
src/: ffi.rs  lib.rs
src/core/: keys.rs  mod.rs  num.rs  polynomial.rs  polynominal.rs  quaternion.rs  u256.rs  wide_arith.rs
src/core/consts/: mod.rs
src/core/rns/: converter.rs  mod.rs
src/hal/: mod.rs
src/hal/cpu/: mod.rs  ntt.rs
src/ntt/: mod.rs  qntt.rs  simd_utils.rs
src/serialization/: mod.rs
