[package]
name = "qfhe"
version = "0.0.5"
edition = "2024"

[toolchain]
channel = "nightly"

[lib]
crate-type = ["cdylib"] # C-compatible dynamic library로 컴파일

[build-dependencies]
bindgen = "0.72.0"
cbindgen = "0.29.0"

[dependencies]
crypto-bigint = { version = "0.6.1", features = ["alloc", "rand_core"] }
hexstring = "0.1.4"
rand = "0.9.2"
rand_distr = { version = "0.5.1", features = ["std_math"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["alloc", "derive", "serde_derive"] }
serde_json = { version = "1.0.142", features = ["preserve_order", "alloc", "raw_value"] }
