[package]
name = "qfhe"
version = "0.0.5"
edition = "2024"

[toolchain]
channel = "nightly"

[lib]
crate-type = ["cdylib"] # C-compatible dynamic library로 컴파일

[build-dependencies]
bindgen = "0.72.0"
cbindgen = "0.29.0"

[dependencies]
bincode = "1.3.3" # 바이너리 직렬화를 위해 추가
chacha20 = { version = "0.9.1", features = ["std", "zeroize"] }
crypto-bigint = { version = "0.6.1", features = ["alloc", "rand_core"] }
rand = "0.9.2"
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
rand_core = { version = "0.9.3", features = ["os_rng", "serde", "std"] }
rand_distr = { version = "0.5.1", features = ["std_math"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["alloc", "derive", "serde_derive"] }
serde_json = { version = "1.0.142", features = ["preserve_order", "alloc", "raw_value"] }
